--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>
                     <span class="logo-text">Emenike</span>
                     <img
-                        src="images/IMG-20251102-WA0019-removebg-preview.png"
+                        src="https://via.placeholder.com/100x100/07b1d0/ffffff?text=EH"
                         alt="Emenike Hospital Logo"
                         class="logo-image"
                     />
@@ -63,7 +63,7 @@
     <section class="hero-video">
         <div class="video-container">
             <video autoplay muted loop>
-                <source src="video/VID_20251102_232021_463_bsl.mp4" type="video/mp4">
+                <source src="https://assets.mixkit.co/videos/preview/mixkit-doctor-holding-a-tablet-and-looking-at-the-camera-44733-large.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
@@ -200,7 +200,7 @@
         </div>
     </section>
 
-    <!-- NEW: About Us Section -->
+    <!-- About Us Section -->
     <section class="about-section">
         <div class="container">
             <div class="about-container">
@@ -242,7 +242,7 @@
                 <div class="about-image-container">
                     <div class="about-bg-animation" id="aboutBgAnimation"></div>
                     <img 
-                        src="./images/Doctors.png" 
+                        src="https://images.unsplash.com/photo-1516549655669-dfbf54c8a963?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
                         alt="Emenike Hospital Facility" 
                         class="about-image"
                     >
@@ -329,7 +329,7 @@
         </div>
     </section>
 
-    <!-- NEW: Emergency Banner -->
+    <!-- Emergency Banner -->
     <section class="emergency-banner">
         <div class="container">
             <h2>Emergency Medical Care Available 24/7</h2>
@@ -339,7 +339,7 @@
         </div>
     </section>
 
-    <!-- NEW: Doctors Section -->
+    <!-- Doctors Section -->
     <section class="doctors-section">
         <div class="container">
             <div class="section-header">
@@ -391,7 +391,7 @@
         </div>
     </section>
 
-    <!-- NEW: Testimonials Section -->
+    <!-- Testimonials Section -->
     <section class="testimonials-section">
         <div class="container">
             <div class="section-header">
@@ -436,7 +436,7 @@
         </div>
     </section>
 
-    <!-- NEW: Health Tips Section -->
+    <!-- Health Tips Section -->
     <section class="health-tips-section">
         <div class="container">
             <div class="section-header">
@@ -478,7 +478,7 @@
         </div>
     </section>
 
-    <!-- NEW: Insurance Section -->
+    <!-- Insurance Section -->
     <section class="insurance-section">
         <div class="container">
             <div class="section-header">
@@ -496,7 +496,7 @@
         </div>
     </section>
 
-    <!-- NEW: CTA Section -->
+    <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
             <h2>Ready to Take the Next Step?</h2>
@@ -508,14 +508,14 @@
         </div>
     </section>
 
-    <!-- NEW: Footer with Logo -->
+    <!-- Footer with Logo -->
     <footer class="site-footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
                     <div class="footer-logo">
                         <img
-                            src="images/IMG-20251102-WA0019-removebg-preview.png"
+                            src="https://via.placeholder.com/80x80/07b1d0/ffffff?text=EH"
                             alt="Emenike Hospital Logo"
                             class="footer-logo-image"
                         />
