--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>
                     <span class="logo-text">Emenike</span>
                     <img
-                        src="https://via.placeholder.com/100x100/07b1d0/ffffff?text=EH"
+                         src="images/IMG-20251102-WA0019-removebg-preview.png"
                         alt="Emenike Hospital Logo"
                         class="logo-image"
                     />
