--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                 </div>
                 
                 <!-- Slide 3 -->
-                <div class="carousel-slide" style="background-image: url('/images/Doctors.png')">
+                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1516549655669-dfbf54c8a963?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80')">
                     <div class="carousel-content">
                         <h1>Compassionate Medical Team</h1>
                         <p>Our skilled doctors and healthcare professionals are committed to providing personalized care with empathy and expertise.</p>
@@ -100,7 +100,7 @@
                 </div>
                 
                 <!-- Slide 4 -->
-                <div class="carousel-slide" style="background-image: url('/images/IMG-20251102-WA0020.jpg')">
+                <div class="carousel-slide" style="background-image: url('https://images.unsplash.com/photo-1559757175-0eb30cd8c063?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80')">
                     <div class="carousel-content">
                         <h1>Innovation in Medicine</h1>
                         <p>We continuously invest in the latest medical technologies and treatment methods to provide cutting-edge healthcare solutions.</p>
@@ -374,7 +374,7 @@
                 <div class="footer-col">
                     <div class="footer-logo">
                         <img
-                            src="images/IMG-20251102-WA0019-removebg-preview.png"
+                           src="images/IMG-20251102-WA0019-removebg-preview.png"
                             alt="Emenike Hospital Logo"
                             class="footer-logo-image"
                         />
