--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="hero-video">
         <div class="video-container">
             <video autoplay muted loop>
-                <source src="https://assets.mixkit.co/videos/preview/mixkit-doctor-holding-a-tablet-and-looking-at-the-camera-44733-large.mp4" type="video/mp4">
+                <source src="/video/VID_20251102_232021_463_bsl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
@@ -242,7 +242,7 @@
                 <div class="about-image-container">
                     <div class="about-bg-animation" id="aboutBgAnimation"></div>
                     <img 
-                        src="https://images.unsplash.com/photo-1516549655669-dfbf54c8a963?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        src="/images/Doctors.png" 
                         alt="Emenike Hospital Facility" 
                         class="about-image"
                     >
@@ -515,7 +515,7 @@
                 <div class="footer-col">
                     <div class="footer-logo">
                         <img
-                            src="https://via.placeholder.com/80x80/07b1d0/ffffff?text=EH"
+                           src="images/IMG-20251102-WA0019-removebg-preview.png"
                             alt="Emenike Hospital Logo"
                             class="footer-logo-image"
                         />
