--- a/book-appoint.html
+++ b/book-appoint.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Appointment - Doctors Hospital</title>
+    <title>Book Appointment - Emenike Hospital</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/book-appoint.css">
@@ -307,14 +307,14 @@
         </div>
     </section>
 
-    <!-- NEW: Footer with Logo -->
+    <!-- Footer with Logo -->
     <footer class="site-footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
                     <div class="footer-logo">
                         <img
-                            src="/images/IMG-20251102-WA0019-removebg-preview.png"
+                            src="images/IMG-20251102-WA0019-removebg-preview.png"
                             alt="Emenike Hospital Logo"
                             class="footer-logo-image"
                         />
@@ -371,7 +371,6 @@
     <button class="scroll-to-top" id="scrollToTop">
         <i class="fas fa-chevron-up"></i>
     </button>
-
 
     <script src="javascript/book-appoint.js"></script>
 </body>
