--- a/cardiology.html
+++ b/cardiology.html
@@ -44,184 +44,183 @@
         }
 
         /* Top Bar Styles */
-        .topbar {
-            background: var(--secondary);
-            color: #fff;
-            font-size: 0.85rem;
-            padding: 8px 0;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
+.topbar {
+  background: var(--secondary);
+  color: #fff;
+  font-size: 0.85rem;
+  padding: 8px 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
 
-        .topbar-inner {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
+.topbar-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
-        .top-left {
-            font-weight: 500;
-            letter-spacing: 0.5px;
-        }
+.top-left {
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
 
-        .top-right {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            flex-wrap: wrap;
-        }
+.top-right {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
 
-        .top-right span {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-        }
+.top-right span {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
 
-        .top-right i {
-            font-size: 0.8rem;
-            opacity: 0.9;
-        }
+.top-right i {
+  font-size: 0.8rem;
+  opacity: 0.9;
+}
 
-        .phone {
-            margin-right: 10px;
-        }
+.phone {
+  margin-right: 10px;
+}
 
-        .social-icons {
-            display: flex;
-            gap: 12px;
-        }
+.social-icons {
+  display: flex;
+  gap: 12px;
+}
 
-        .social-icons a {
-            color: #fff;
-            text-decoration: none;
-            transition: opacity 0.3s;
-            width: 24px;
-            height: 24px;
-            border-radius: 50%;
-            background: rgba(255, 255, 255, 0.15);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.8rem;
-        }
+.social-icons a {
+  color: #fff;
+  text-decoration: none;
+  transition: opacity 0.3s;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8rem;
+}
 
-        .social-icons a:hover {
-            background: rgba(255, 255, 255, 0.25);
-            transform: translateY(-1px);
-        }
+.social-icons a:hover {
+  background: rgba(255, 255, 255, 0.25);
+  transform: translateY(-1px);
+}
 
-        /* Header Styles */
-        .site-header {
-            background: #fff;
-            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.08);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
+/* Header Styles */
+.site-header {
+  background: #fff;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.08);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 
-        .header-inner {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 0;
-            position: relative;
-        }
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+}
 
-        .logo {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-        }
+.logo {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
 
-        .logo h1 {
-            font-size: 1.8rem;
-            font-weight: 700;
-            color: var(--white);
-            display: flex;
-            align-items: center;
-            margin: 0;
-            line-height: 1;
-            white-space: nowrap;
-        }
+.logo h1 {
+  font-size: clamp(1.5rem, 4vw, 2.2rem);
+  font-weight: 700;
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  margin: 0;
+  line-height: 1;
+  white-space: nowrap;
+}
 
-        .logo-image {
-            height: 70px;
-            width: auto;
-            vertical-align: middle;
-            margin: 0 5px;
-        }
+.logo-image {
+  height: clamp(60px, 10vw, 100px);
+  width: auto;
+  vertical-align: middle;
+  margin: 0 5px;
+}
 
-        .logo-text {
-            color: var(--dark);
-            font-weight: 700;
-        }
+.logo-text {
+  color: var(--dark);
+  font-weight: 700;
+}
 
-        .main-nav ul {
-            display: flex;
-            list-style: none;
-            flex-wrap: wrap;
-        }
+.main-nav ul {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+}
 
-        .main-nav li {
-            margin-left: 20px;
-        }
+.main-nav li {
+  margin-left: 15px;
+}
 
-        .main-nav a {
-            text-decoration: none;
-            color: var(--text);
-            font-weight: 600;
-            transition: color 0.3s;
-            position: relative;
-            font-size: 0.95rem;
-        }
+.main-nav a {
+  text-decoration: none;
+  color: var(--text);
+  font-weight: 600;
+  transition: color 0.3s;
+  position: relative;
+  font-size: clamp(0.9rem, 1.5vw, 1rem);
+}
 
-        .main-nav a:hover {
-            color: var(--secondary);
-        }
+.main-nav a:hover {
+  color: var(--secondary);
+}
 
-        .main-nav a.active {
-            color: var(--secondary);
-        }
+.main-nav a.active {
+  color: var(--secondary);
+}
 
-        .main-nav a.active::after {
-            content: "";
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background: var(--dark);
-        }
+.main-nav a.active::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: var(--dark);
+}
 
-        .btn-outline {
-            background: transparent;
-            border: 2px solid var(--secondary);
-            color: var(--secondary);
-            padding: 8px 20px;
-            border-radius: 30px;
-            font-weight: 700;
-            transition: all 0.3s;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 0.9rem;
-        }
+.btn-outline {
+  background: transparent;
+  border: 2px solid var(--secondary);
+  color: var(--secondary);
+  padding: 8px 20px;
+  border-radius: 30px;
+  font-weight: 700;
+  transition: all 0.3s;
+  text-decoration: none;
+  display: inline-block;
+  font-size: clamp(0.9rem, 1.5vw, 1rem);
+}
 
-        .btn-outline:hover {
-            background: var(--text);
-            color: white;
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
-        }
+.btn-outline:hover {
+  background: var(--text);
+  color: white;
+  transform: translateY(-2px);
+  box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
+}
 
-        .nav-toggle {
-            display: none;
-            background: none;
-            border: none;
-            font-size: 1.5rem;
-            cursor: pointer;
-            color: var(--text);
-        }
+.nav-toggle {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: var(--text);
+}
+
 
         /* Scroll to Top Button */
         .scroll-to-top {
@@ -277,6 +276,7 @@
             background: url("https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80") center/cover no-repeat;
             opacity: 0.2;
             z-index: 1;
+            background-attachment: fixed;
         }
 
         .cardiology-hero-content {
@@ -680,6 +680,7 @@
             color: var(--text);
             text-align: center;
             position: relative;
+            background-attachment: fixed;
         }
 
         .cta-section::before {
@@ -837,64 +838,51 @@
         }
 
         @media (max-width: 768px) {
-            .nav-toggle {
-                display: block;
-            }
+  .nav-toggle {
+    display: block;
+  }
 
-            .main-nav ul {
-                display: none;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                width: 100%;
-                background: rgba(7, 177, 208, 0.95);
-                flex-direction: column;
-                padding: 20px;
-                box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-                z-index: 99;
-                backdrop-filter: blur(10px);
-            }
+  .main-nav ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: rgba(7, 177, 208, 0.95);
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    z-index: 99;
+    backdrop-filter: blur(10px);
+  }
 
-            .main-nav.active ul {
-                display: flex;
-            }
+  .main-nav.active ul {
+    display: flex;
+  }
 
-            .main-nav a {
-                color: var(--white);
-                font-size: 1rem;
-                padding: 10px 0;
-            }
+  .main-nav a.active {
+    color: var(--text);
+  }
 
-            .main-nav a:hover {
-                color: var(--light);
-            }
+  .main-nav a:hover {
+    color: var(--white);
+  }
 
-            .main-nav a.active {
-                color: var(--light);
-            }
+  .main-nav li {
+    margin: 10px 0;
+  }
 
-            .main-nav a.active::after {
-                background: var(--light);
-            }
+  .topbar-inner {
+    flex-direction: column;
+    gap: 8px;
+    text-align: center;
+  }
 
-            .main-nav li {
-                margin: 0;
-                width: 100%;
-                text-align: center;
-            }
+  .top-right {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
-            .topbar-inner {
-                flex-direction: column;
-                gap: 8px;
-                text-align: center;
-            }
-
-            .top-right {
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: 10px;
-            }
-            
             .phone {
                 margin-right: 0;
             }
@@ -1393,45 +1381,6 @@
         <i class="fas fa-chevron-up"></i>
     </button>
 
-    <script>
-        // Set current year in footer
-        document.getElementById("year").textContent = new Date().getFullYear();
-
-        // Mobile navigation toggle
-        const navToggle = document.getElementById("navToggle");
-        const mainNav = document.getElementById("mainNav");
-
-        if (navToggle && mainNav) {
-            navToggle.addEventListener("click", () => {
-                mainNav.classList.toggle("active");
-            });
-        }
-
-        // Header scroll effect
-        window.addEventListener("scroll", function () {
-            const header = document.querySelector(".site-header");
-            if (window.scrollY > 50) {
-                header.classList.add("scrolled");
-            } else {
-                header.classList.remove("scrolled");
-            }
-
-            // Show/hide scroll to top button
-            const scrollToTopBtn = document.getElementById("scrollToTop");
-            if (window.scrollY > 300) {
-                scrollToTopBtn.classList.add("visible");
-            } else {
-                scrollToTopBtn.classList.remove("visible");
-            }
-        });
-
-        // Scroll to top functionality
-        document.getElementById("scrollToTop").addEventListener("click", function () {
-            window.scrollTo({
-                top: 0,
-                behavior: "smooth",
-            });
-        });
-    </script>
+    <script src="javascript/cardiology.js"></script>
 </body>
 </html>
