--- a/orthorpedic.html
+++ b/orthorpedic.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="css/orthorpedic.css">
 </head>
 <body>
+     <!-- Top Bar -->
+    <div class="topbar">
+        <div class="container topbar-inner">
+            <div class="top-left">24/7 Opened</div>
+            <div class="top-right">
+                <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
+                <span class="phone"><i class="fas fa-phone"></i> +234 800 123 4567</span>
+                <div class="social-icons">
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Header -->
     <header class="site-header">
         <div class="container header-inner">
@@ -16,7 +33,7 @@
                 <h1>
                     <span class="logo-text">Emenike</span>
                     <img
-                        src="https://i.ibb.co/0Q8q7Z6/hospital-logo.png"
+                         src="images/IMG-20251102-WA0019-removebg-preview.png"
                         alt="Emenike Hospital Logo"
                         class="logo-image"
                     />
@@ -28,7 +45,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="services.html" class="active">Services</a></li>
                     <li><a href="doctors.html">Doctors</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a class="btn-outline" href="book-appoint.html">Book Appointment</a></li>
@@ -305,25 +322,26 @@
         </div>
     </section>
 
-    <!-- Footer -->
+   <!-- NEW: Footer with Logo -->
     <footer class="site-footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
                     <div class="footer-logo">
                         <img
-                            src="https://i.ibb.co/0Q8q7Z6/hospital-logo.png"
+                            src="images/IMG-20251102-WA0019-removebg-preview.png"
                             alt="Emenike Hospital Logo"
                             class="footer-logo-image"
                         />
                         <span class="footer-logo-text">Emenike Hospital</span>
                     </div>
-                    <p>Providing exceptional healthcare with compassion and innovation for over 25 years.</p>
+                    <p>Emenike Hospital: Where excellence, compassion, and innovation redefine healthcare. Our cutting-edge facility offers personalized, top-tier care across various specialties, ensuring every patient receives exceptional treatment.</p>
                     <div class="social-icons">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 
@@ -341,10 +359,10 @@
                 <div class="footer-col">
                     <h3>Our Services</h3>
                     <ul class="footer-links">
-                        <li><a href="cardiology.html">Cardiology</a></li>
-                        <li><a href="neurology.html">Neurology</a></li>
-                        <li><a href="pediatrics.html">Pediatrics</a></li>
-                        <li><a href="orthopedics.html">Orthopedics</a></li>
+                        <li><a href="#">Cardiology</a></li>
+                        <li><a href="#">Neurology</a></li>
+                        <li><a href="#">Pediatrics</a></li>
+                        <li><a href="#">Orthopedics</a></li>
                         <li><a href="#">Emergency Care</a></li>
                     </ul>
                 </div>
@@ -354,7 +372,7 @@
                     <p><i class="fas fa-map-marker-alt"></i> Plot 123 Naze Roundabout, Owerri</p>
                     <p><i class="fas fa-phone"></i> +234 800 123 4567</p>
                     <p><i class="fas fa-envelope"></i> info@emenikehospital.com</p>
-                    <p><i class="fas fa-clock"></i> 24/7 Emergency Services</p>
+                    <p><i class="fas fa-clock"></i> 24/7 Opened</p>
                 </div>
             </div>
             
@@ -364,6 +382,10 @@
         </div>
     </footer>
 
+    <!-- Scroll to Top Button -->
+    <button class="scroll-to-top" id="scrollToTop">
+        <i class="fas fa-chevron-up"></i>
+    </button>
     <script src="javascript/orthorpedic.js"></script>
 </body>
 </html>
