--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="hero-video">
         <div class="video-container">
             <video autoplay muted loop>
-                <source src="/video/VID_20251102_232021_463_bsl.mp4" type="video/mp4">
+                <source src="./video/VID_20251102_232021_463_bsl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
@@ -241,7 +241,7 @@
                 <div class="about-image-container">
                     <div class="about-bg-animation" id="aboutBgAnimation"></div>
                     <img 
-                        src="/images/Doctors.png" 
+                        src="./images/Doctors.png" 
                         alt="Emenike Hospital Facility" 
                         class="about-image"
                     >
