--- a/pediatric.html
+++ b/pediatric.html
@@ -194,7 +194,7 @@
                 </div>
                 
                 <div class="environment-image">
-                    <img src="https://images.unsplash.com/photo-1584820927498-cfe5211fd8bf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Child-Friendly Hospital Environment">
+                    <img src="./images/pediatric.jpeg">
                 </div>
             </div>
         </div>
