--- a/contact.html
+++ b/contact.html
@@ -17,65 +17,53 @@
   <body>
     <!-- Top Bar -->
     <div class="topbar">
-      <div class="container topbar-inner">
-        <div class="top-left">24/7 Opened</div>
-        <div class="top-right">
-          <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
-          <span class="phone"
-            ><i class="fas fa-phone"></i> +234 800 123 4567</span
-          >
-          <div class="social-icons">
-            <a href="#" aria-label="Facebook"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" aria-label="Instagram"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="#" aria-label="LinkedIn"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-          </div>
+        <div class="container topbar-inner">
+            <div class="top-left">24/7 Opened</div>
+            <div class="top-right">
+                <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
+                <span class="phone"><i class="fas fa-phone"></i> +234 800 123 4567</span>
+                <div class="social-icons">
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
     <!-- Header -->
     <header class="site-header">
-      <div class="container header-inner">
-        <div class="logo">
-          <h1>
-            <span class="logo-text">Emenike</span>
-            <img
-              src="images/IMG-20251102-WA0019-removebg-preview.png"
-              alt="Emenike Hospital Logo"
-              class="logo-image"
-            />
-            <span class="logo-text">Hospital</span>
-          </h1>
+        <div class="container header-inner">
+           <div class="logo">
+                <h1>
+                    <span class="logo-text">Emenike</span>
+                    <img
+                         src="images/IMG-20251102-WA0019-removebg-preview.png"
+                        alt="Emenike Hospital Logo"
+                        class="logo-image"
+                    />
+                    <span class="logo-text">Hospital</span>
+                </h1>
+            </div>
+
+            <nav class="main-nav" id="mainNav">
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="doctors.html">Doctors</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a class="btn-outline" href="book-appoint.html">Book Appointment</a></li>
+                </ul>
+            </nav>
+
+            <button class="nav-toggle" id="navToggle">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
-
-        <nav class="main-nav" id="mainNav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="doctors.html">Doctors</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
-            <li>
-              <a class="btn-outline" href="book-appoint.html"
-                >Book Appointment</a
-              >
-            </li>
-          </ul>
-        </nav>
-
-        <button class="nav-toggle" id="navToggle">
-          <i class="fas fa-bars"></i>
-        </button>
-      </div>
     </header>
-
+    
     <!-- Hero Section -->
     <section class="contact-hero">
       <div class="container">
@@ -348,7 +336,7 @@
           <div class="footer-col">
             <div class="footer-logo">
               <img
-                src="/images/IMG-20251102-WA0019-removebg-preview.png"
+                src="images/IMG-20251102-WA0019-removebg-preview.png"
                 alt="Emenike Hospital Logo"
                 class="footer-logo-image"
               />
