--- a/doctors.html
+++ b/doctors.html
@@ -13,7 +13,7 @@
     <!-- Top Bar -->
     <div class="topbar">
         <div class="container topbar-inner">
-            <div class="top-left">24/7 Opened</div>
+            <div class="top-left">24/7 Open</div>
             <div class="top-right">
                 <span><i class="fas fa-envelope"></i> Info@emenikehospital.com</span>
                 <span class="phone"><i class="fas fa-phone"></i> +234 800 123 4567</span>
