--- a/orthalmology.html
+++ b/orthalmology.html
@@ -19,7 +19,7 @@
     <!-- Top Bar -->
     <div class="topbar">
       <div class="container topbar-inner">
-        <div class="top-left">24/7 Opened</div>
+        <div class="top-left">24/7 Open</div>
         <div class="top-right">
           <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
           <span class="phone"
