--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./images/IMG-20251102-WA0019-removebg-preview.png">
+    <link rel="icon" href="./images/IMG-20251102-WA0019-removebg-preview.png" />
     <title>Contact Us - Doctors Hospital</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap"
@@ -13,58 +13,70 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/contact.css" />
   </head>
   <body>
     <!-- Top Bar -->
     <div class="topbar">
-        <div class="container topbar-inner">
-            <div class="top-left">24/7 Open</div>
-            <div class="top-right">
-                <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
-                <span class="phone"><i class="fas fa-phone"></i> +234 800 123 4567</span>
-                <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
+      <div class="container topbar-inner">
+        <div class="top-left">24/7 Open</div>
+        <div class="top-right">
+          <span><i class="fas fa-envelope"></i> info@emenikehospital.com</span>
+          <span class="phone"
+            ><i class="fas fa-phone"></i> +234 800 123 4567</span
+          >
+          <div class="social-icons">
+            <a href="#" aria-label="Facebook"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="#" aria-label="LinkedIn"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- Header -->
     <header class="site-header">
-        <div class="container header-inner">
-           <div class="logo">
-                <h1>
-                    <span class="logo-text">Emenike</span>
-                    <img
-                         src="images/IMG-20251102-WA0019-removebg-preview.png"
-                        alt="Emenike Hospital Logo"
-                        class="logo-image"
-                    />
-                    <span class="logo-text">Hospital</span>
-                </h1>
-            </div>
-
-            <nav class="main-nav" id="mainNav">
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="doctors.html">Doctors</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a class="btn-outline" href="book-appoint.html">Book Appointment</a></li>
-                </ul>
-            </nav>
-
-            <button class="nav-toggle" id="navToggle">
-                <i class="fas fa-bars"></i>
-            </button>
+      <div class="container header-inner">
+        <div class="logo">
+          <h1>
+            <span class="logo-text">Emenike</span>
+            <img
+              src="images/IMG-20251102-WA0019-removebg-preview.png"
+              alt="Emenike Hospital Logo"
+              class="logo-image"
+            />
+            <span class="logo-text">Hospital</span>
+          </h1>
         </div>
+
+        <nav class="main-nav" id="mainNav">
+          <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="doctors.html">Doctors</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li>
+              <a class="btn-outline" href="book-appoint.html"
+                >Book Appointment</a
+              >
+            </li>
+          </ul>
+        </nav>
+
+        <button class="nav-toggle" id="navToggle">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
     </header>
-    
+
     <!-- Hero Section -->
     <section class="contact-hero">
       <div class="container">
@@ -382,11 +394,11 @@
           <div class="footer-col">
             <h3>Our Services</h3>
             <ul class="footer-links">
-              <li><a href="#">Cardiology</a></li>
-              <li><a href="#">Neurology</a></li>
-              <li><a href="#">Pediatrics</a></li>
-              <li><a href="#">Orthopedics</a></li>
-              <li><a href="#">Emergency Care</a></li>
+              <li><a href="cardiology.html">Cardiology</a></li>
+              <li><a href="neurology.html">Neurology</a></li>
+              <li><a href="pediatric.html">Pediatrics</a></li>
+              <li><a href="orthorpedic.html">Orthopedics</a></li>
+              <li><a href="pediatric.html">Pediatric</a></li>
             </ul>
           </div>
 
