--- a/doctors.html
+++ b/doctors.html
@@ -416,11 +416,11 @@
                 <div class="footer-col">
                     <h3>Our Services</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Cardiology</a></li>
-                        <li><a href="#">Neurology</a></li>
-                        <li><a href="#">Pediatrics</a></li>
-                        <li><a href="#">Orthopedics</a></li>
-                        <li><a href="#">Emergency Care</a></li>
+                        <li><a href="cardiology.html">Cardiology</a></li>
+                        <li><a href="neurology.html">Neurology</a></li>
+                        <li><a href="pediatric.html">Pediatrics</a></li>
+                        <li><a href="orthorpedic.html">Orthopedics</a></li>
+                        <li><a href="pediatric.html">Pediatric</a></li>
                     </ul>
                 </div>
                 
