--- a/orthalmology.html
+++ b/orthalmology.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./images/IMG-20251102-WA0019-removebg-preview.png">
+    <link rel="icon" href="./images/IMG-20251102-WA0019-removebg-preview.png" />
     <title>Ophthalmology Services | Emenike Hospital</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap"
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/orthalmology.css">
+    <link rel="stylesheet" href="css/orthalmology.css" />
   </head>
   <body>
     <!-- Top Bar -->
@@ -592,11 +592,11 @@
           <div class="footer-col">
             <h3>Our Services</h3>
             <ul class="footer-links">
-              <li><a href="#">Cardiology</a></li>
-              <li><a href="#">Neurology</a></li>
-              <li><a href="#">Pediatrics</a></li>
-              <li><a href="#">Orthopedics</a></li>
-              <li><a href="#">Emergency Care</a></li>
+              <li><a href="cardiology.html">Cardiology</a></li>
+              <li><a href="neurology.html">Neurology</a></li>
+              <li><a href="pediatric.html">Pediatrics</a></li>
+              <li><a href="orthorpedic.html">Orthopedics</a></li>
+              <li><a href="pediatric.html">Pediatric</a></li>
             </ul>
           </div>
 
