--- a/index.html
+++ b/index.html
@@ -88,10 +88,6 @@
                             <i class="fas fa-clock"></i>
                             <span>24/7 Emergency</span>
                         </div>
-                        <div class="hero-feature">
-                            <i class="fas fa-award"></i>
-                            <span>Quality Care</span>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -106,10 +102,6 @@
                         <a href="services.html" class="btn-secondary">Our Services</a>
                     </div>
                     <div class="hero-features">
-                        <div class="hero-feature">
-                            <i class="fas fa-procedures"></i>
-                            <span>Modern Facilities</span>
-                        </div>
                         <div class="hero-feature">
                             <i class="fas fa-stethoscope"></i>
                             <span>Expert Surgeons</span>
@@ -140,10 +132,6 @@
                             <i class="fas fa-users"></i>
                             <span>Family-Centered</span>
                         </div>
-                        <div class="hero-feature">
-                            <i class="fas fa-smile"></i>
-                            <span>Patient Satisfaction</span>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -161,10 +149,6 @@
                         <div class="hero-feature">
                             <i class="fas fa-ambulance"></i>
                             <span>Quick Response</span>
-                        </div>
-                        <div class="hero-feature">
-                            <i class="fas fa-clock"></i>
-                            <span>24/7 Availability</span>
                         </div>
                         <div class="hero-feature">
                             <i class="fas fa-first-aid"></i>
@@ -545,11 +529,11 @@
                 <div class="footer-col">
                     <h3>Our Services</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Cardiology</a></li>
-                        <li><a href="#">Neurology</a></li>
-                        <li><a href="#">Pediatrics</a></li>
-                        <li><a href="#">Orthopedics</a></li>
-                        <li><a href="#">Emergency Care</a></li>
+                        <li><a href="cardiology.html">Cardiology</a></li>
+                        <li><a href="neurology.html">Neurology</a></li>
+                        <li><a href="pediatric.html">Pediatrics</a></li>
+                        <li><a href="orthorpedic.html">Orthopedics</a></li>
+                        <li><a href="pediatric.html">Pediatric</a></li>
                     </ul>
                 </div>
                 
